# videodubbing

./: BUGFIX_SUMMARY.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  GOOGLE_ADK_INTEGRATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  QUICKSTART.md  README.md  SPEAKER_DETECTION_FEATURE.md  UI_CHANGES_SUMMARY.md  VISUAL_REFERENCE.md  docker-compose.yml  main.py  pyproject.toml  setup.sh
.github/: copilot-instructions.md
.github/agents/: adk-agent-specialist.md  frontend-specialist.md  my-agent.md  video-dubbing-architect.md
backend/: .env  .env.example  DATABASE_SETUP.md  README.md  SETUP_COMPLETE.md  __init__.py  coursewagon-gcs-service-account.json  main.py  pyproject.toml  requirements.txt  test_connections.py  videodubbing-gcs-credentials.json
backend/agents/: __init__.py  agent.py  base.py  coordinator.py  prompts.py  speech_synthesis.py  transcription.py  translation.py
backend/api/: __init__.py
backend/api/routes/: health.py  jobs.py  voices.py
backend/config/: settings.py
backend/db/: __init__.py  mongodb.py  redis_client.py  repositories.py
backend/models/: __init__.py  job.py  processing_log.py  speaker.py  transcript.py  translation.py  unified.py  voice.py
backend/services/: __init__.py  circuit_breaker.py  gemini_audio.py  gemini_llm.py  gemini_tts.py  gemini_unified.py  storage.py
backend/utils/: logging_config.py
backend/workers/: __init__.py  job_processor.py
frontend/: .env.development  README_FRONTEND.md  index.html  package-lock.json  package.json  test-api-integration.sh  validate-build.sh
frontend/src/: App.css  App.tsx  ErrorBoundary.tsx  HomePage.tsx  JobCard.tsx  JobDetailPage.tsx  JobListPage.tsx  LanguageSelector.tsx  Layout.tsx  Navigation.tsx  ProgressTracker.tsx  SpeakerDisplay.tsx  UploadPage.tsx  VideoUpload.tsx  VoiceConfigurator.tsx  (+6 more)
