[project]
name = "videodubbing"
version = "0.1.0"
description = "Production-level video dubbing application using Google ADK and Gemini APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "google-genai>=1.45.0",
    "google-adk>=1.17.0",
    "google-cloud-storage>=2.18.0",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-json-logger>=3.2.0",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
