[project]
name = "videodubbing"
version = "0.1.0"
description = "Production-level video dubbing application using Google ADK and Gemini APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "google-genai",
    "google-adk",
    "google-cloud-storage",
    "motor",
    "pymongo",
    "redis",
    "celery",
    "httpx",
    "aiofiles",
    "python-json-logger",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
